# kiara_plugin.streamlit

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  environment.yaml  environment.yml  mkdocs.yml  pixi.toml  pyproject.toml  requirements.txt  setup.cfg  versions.json
.github/workflows/: build-darwin.yaml  build-linux.yaml  build-windows.yaml
0.4.0/: objects.inv
0.4.0/development/: index.html
0.4.0/info/module_types/: index.html
0.4.0/reference/kiara_plugin/streamlit/data_types/: index.html
0.4.0/reference/kiara_plugin/streamlit/interfaces/__init__/: index.html
0.4.0/reference/kiara_plugin/streamlit/models/: index.html
0.4.0/reference/kiara_plugin/streamlit/streamlit/: index.html
0.4.0/search/: search_index.json
0.4.0/usage/: index.html
0.4.1/: objects.inv
0.4.1/info/module_types/: index.html
0.4.1/reference/kiara_plugin/streamlit/__init__/: index.html
0.4.1/reference/kiara_plugin/streamlit/data_types/: index.html
0.4.1/reference/kiara_plugin/streamlit/defaults/: index.html
0.4.1/reference/kiara_plugin/streamlit/interfaces/__init__/: index.html
0.4.1/reference/kiara_plugin/streamlit/modules/__init__/: index.html
0.4.1/reference/kiara_plugin/streamlit/renderers/__init__/: index.html
0.4.1/usage/: index.html
0.4.2/: 404.html
0.4.2/reference/kiara_plugin/streamlit/components/__init__/: index.html
0.4.2/reference/kiara_plugin/streamlit/data_types/: index.html
0.4.2/reference/kiara_plugin/streamlit/defaults/: index.html
0.4.2/reference/kiara_plugin/streamlit/interfaces/__init__/: index.html
0.4.2/reference/kiara_plugin/streamlit/modules/__init__/: index.html
0.4.2/reference/kiara_plugin/streamlit/pipelines/__init__/: index.html
0.4.2/reference/kiara_plugin/streamlit/utils/__init__/: index.html
0.4.2/reference/kiara_plugin/streamlit/utils/components/: index.html
0.4.2/reference/kiara_plugin/streamlit/utils/monkey_patches/: index.html
0.4.2/search/: search_index.json
0.4.3/info/module_types/: index.html
0.4.3/reference/kiara_plugin/streamlit/components/__init__/: index.html
0.4.3/reference/kiara_plugin/streamlit/renderers/__init__/: index.html
0.4.3/reference/kiara_plugin/streamlit/utils/class_loading/: index.html
0.4.3/reference/kiara_plugin/streamlit/utils/components/: index.html
0.4.3/search/: search_index.json
0.4.5/: 404.html
0.4.5/reference/kiara_plugin/streamlit/components/__init__/: index.html
0.4.5/search/: search_index.json
0.4.6/: index.html
0.4.6/development/: index.html
0.4.6/reference/kiara_plugin/streamlit/__init__/: index.html
0.4.6/reference/kiara_plugin/streamlit/api/: index.html
0.4.6/reference/kiara_plugin/streamlit/data_types/: index.html
0.4.6/reference/kiara_plugin/streamlit/defaults/: index.html
apps/: components.py  dev_helper.py  doc.py  kiara_api.py  operations.py  pipelines.py
apps/jobs/: download_journals.yaml
apps/pipelines/: components_doc_onboarding.yaml  example_file_onboarding.yaml  operations_doc_onboarding.yaml
ci/conda/: conda-pkg-patch.yaml
docs/: development.md  index.md
examples/streamlit/: analyze_network_data.py  example.py  help.py  pipeline.py  step_inputs.py  workflow.py  workflow_dynamic.py  workflow_static.py  workflows.py  workshop.py
examples/streamlit/pipelines/: example.yaml  topic_modeling.yaml
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/SUMMARY/: index.html
latest/assets/: _mkdocstrings.css
latest/development/: index.html
latest/info/SUMMARY/: index.html
latest/info/module_types/: index.html
latest/info/operations/: index.html
latest/reference/SUMMARY/: index.html
latest/reference/kiara_plugin/streamlit/__init__/: index.html
latest/reference/kiara_plugin/streamlit/api/: index.html
latest/reference/kiara_plugin/streamlit/data_types/: index.html
latest/reference/kiara_plugin/streamlit/defaults/: index.html
latest/reference/kiara_plugin/streamlit/models/: index.html
latest/reference/kiara_plugin/streamlit/streamlit/: index.html
latest/search/: search_index.json
latest/usage/: index.html
scripts/documentation/: gen_info_pages.py  gen_module_doc.py
src/kiara_plugin/streamlit/: __init__.py  api.py  data_types.py  defaults.py  models.py  streamlit.py
src/kiara_plugin/streamlit/components/: __init__.py  models.py
src/kiara_plugin/streamlit/components/context/: __init__.py
src/kiara_plugin/streamlit/components/data_import/: __init__.py  tabular.py
src/kiara_plugin/streamlit/components/explore/: tabular.py
src/kiara_plugin/streamlit/components/info/: __init__.py  api.py  components.py
src/kiara_plugin/streamlit/components/input/: __init__.py  assemblies.py  container_types.py  files.py  scalars.py
src/kiara_plugin/streamlit/components/modals/: __init__.py
src/kiara_plugin/streamlit/components/onboarding/: __init__.py  files.py
src/kiara_plugin/streamlit/components/operations/: __init__.py
src/kiara_plugin/streamlit/components/pipelines/: __init__.py
src/kiara_plugin/streamlit/components/piplines/: __init__.py
src/kiara_plugin/streamlit/components/preview/: __init__.py  assemblies.py  core_types.py  network_data.py  tabular.py
src/kiara_plugin/streamlit/components/workflow/: __init__.py  dynamic.py
src/kiara_plugin/streamlit/interfaces/cli/: streamlit.py
src/kiara_plugin/streamlit/modules/: __init__.py
src/kiara_plugin/streamlit/renderers/: __init__.py
src/kiara_plugin/streamlit/utils/: class_loading.py  components.py  monkey_patches.py
stable/development/: index.html
stable/info/SUMMARY/: index.html
stable/info/module_types/: index.html
stable/reference/kiara_plugin/streamlit/__init__/: index.html
stable/reference/kiara_plugin/streamlit/api/: index.html
stable/reference/kiara_plugin/streamlit/data_types/: index.html
stable/reference/kiara_plugin/streamlit/defaults/: index.html
stable/reference/kiara_plugin/streamlit/models/: index.html
stable/reference/kiara_plugin/streamlit/streamlit/: index.html
stable/usage/: index.html
tests/: conftest.py  test_kiara_modules_default.py
(+167 files in other folders)
