[build-system]
requires = [
    "setuptools>=63",
    "setuptools_scm[toml]>7.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "kiara_plugin.streamlit"
description = "Streamlit UI and widgets for kiara"
authors = [
    {name = "Markus Binsteiner", email = "markus@frkl.io"}
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["kiara", "streamlit"]
license = {text = "MPL-2.0"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "kiara_plugin.tabular>=0.4.22",
    "kiara_plugin.onboarding>=0.4.3",
    "streamlit>=1.16.0",
    "streamlit-aggrid>=0.3.3",
    "importlib-resources",
    "pydot>=1.4.0",
    "pyvis>=0.3.0",
    "streamlit-tags>=1.2.8"
]
dynamic = ["version"]

[project.optional-dependencies]
all_plugins = [
    "kiara_plugin.network_analysis>=0.4.9",
    "kiara_plugin.language_processing>=0.4.10",
    "kiara_plugin.html>=0.4.0",
    "kiara_plugin.onboarding>=0.4.2"
]
dev_documentation = [
    "kiara[dev_documentation]"
]
dev_testing = [
    "kiara[dev_testing]",
    "types-setuptools",
    "sqlalchemy-stubs",
    "kiara_plugin.network_analysis>=0.4.7",
]
dev_utils = [
    "kiara[dev_utils]"
]
dev_all = [
    "kiara[dev_all]"
]

[project.entry-points."kiara.plugin"]
streamlit = "kiara_plugin.streamlit"

[project.entry-points."kiara.data_types"]
streamlit = "kiara_plugin.streamlit:find_data_types"

[project.entry-points."kiara.model_classes"]
streamlit = "kiara_plugin.streamlit:find_model_classes"

[project.entry-points."kiara.modules"]
streamlit = "kiara_plugin.streamlit:find_modules"

[project.entry-points."kiara.pipelines"]
streamlit = "kiara_plugin.streamlit:find_pipelines"

[project.entry-points."kiara.cli_subcommands"]
streamlit = "kiara_plugin.streamlit.interfaces.cli.streamlit:streamlit"

[project.entry-points."kiara.streamlit_components"]
streamlit = "kiara_plugin.streamlit:find_kiara_streamlit_components"

[project.entry-points."kiara.renderers"]
jupyter = "kiara_plugin.streamlit:find_renderer_classes"

[project.urls]
homepage = "https://github.com/DHARPA-Project/kiara_plugin.streamlit"
documentation = "https://DHARPA-Project.github.io/kiara_plugin.streamlit"
repository = "https://github.com/DHARPA-Project/kiara_plugin.streamlit"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | external
)/
'''

[tool.setuptools_scm]
write_to = "src/kiara_plugin/streamlit/version.txt"
